--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,16 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+//tasks.bootJar {enabled=true}
+//tasks.jar {enabled=false}
+
+// 위의 것과 동일한 결과를 반영
+/*
+'-plain.jar' 파일은 'jar' 파일과는 다르게
+'dependencies'를 제외한 [classes / resources]만을 포함하고 있어
+`java -jar` 옵션으로 jar 파일을 실행시킬 수 없다.
+ */
+jar {
+    enabled = false
+}
