--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,12 +24,12 @@ jobs:
         with:
           java-version: 17
 
-#      - name: Set yaml file
-#        uses: microsoft/variable-substitution@v1
-#        with:
-#          files: ${{ env.RESOURCE_PATH }}
-#        env:
-#          override.value: ${{ secrets.DI_FROM_SECRET }}
+      - name: Set yaml file
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ${{ env.RESOURCE_PATH }}
+        env:
+          override.value: ${{ secrets.DI_FROM_SECRET }}
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
